<resources>
    <string name="app_name">Yaş Hesaplama</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_giris">Giriş</string>
    <string name="title_activity_soy_agaci">Soy Agaci Ekleme Ekranı</string>
    <string name="title_activity_ne_kadar_buyuk">Ne Kadar Büyüğüm</string>
    <string name="title_activity_digerleri_gor">Diğer Kayıtlar</string>
    <string name="title_activity_soy_agaci_gor">Soyağacı Kayıtlar</string>
    <string name="title_activity_dil_secim_ekrani">Bir Dil Seç</string>
    <string name="title_activity_yas_hesapla">Yaş Hesaplama Ekranı</string>

    <string name="spinnerElemanlar">spinnerElemanlar</string>

    <string name="soyagaci">Soy Agaci</string>
    <string name="verileritemizle">Verileri Temizle</string>


    <string-array name="spinnerElemanlar">
        <item>Seç</item>
        <item>Anne</item>
        <item>Baba</item>
        <item>Kız Evlat</item>
        <item>Erkek Evlat</item>
        <item>Dede</item>
        <item>Büyükanne</item>
    </string-array>


    <string name="girisYasHesaplaButonuTexti">Yaş Hesapla</string>
    <string name="girisSoyAgaciButonuTexti">Soy Ağacı</string>
    <string name="girisDigerButonuTexti">Diğer</string>
    <string name="girisNeKadarBuyugumButonuTexti">Ne Kadar Büyüğüm</string>
    <string name="yasHesaplaBugununTarihiButonu">Bugünün Tarihi</string>
    <string name="yasHesaplaDogumTarihiButonu">Doğum Tarihi</string>
    <string name="yasHesaplaHesaplaButonu">Hesapla</string>
    <string name="ekleButonuTexti">Ekle</string>
    <string name="GorButonuTexti">Gör</string>
    <string name="listeleButonuTexti">Listele</string>
    <string name="soyAgaciDogumGunuButonu">Doğum Günü</string>
    <string name="soyAgaciDogumTarihiTextviewTexti">Doğum Tarihi</string>
    <string name="isimGirHintTexti">İsim Gir</string>
    <string name="NeKadarBuyugumDogumTarihiniGirTexti">Doğum Tarihini Gir</string>
    <string name="ingButonuTexti">İNGİLİZCE</string>
    <string name="btnTurkceButonuTexti">TÜRKÇE</string>

    <string name="dil">Türkçe</string>

    <string name="mesaj_dogum_gunu_ilerde_olamaz">Doğum gününüz bu günün tarihinden ilerde olamaz!</string>
    <string name="mesaj_eklendi">Eklendi</string>
    <string name="mesaj_unvan_sec">Bir ünvan seçmelisin !</string>
    <string name="mesaj_isim_gir">Bir isim girmelisin !</string>
    <string name="mesaj_tarih_sec">Bir tarih girmelisin !</string>
    <string name="dogum_tarihi">Dogum Tarihi</string>
    <string name="mesaj_kayitlar_silindi">Kayıtlar başarıyla silindi .</string>
    <string name="mesaj_zaten_silinmis">Kayıtlar zaten silinmiş .</string>
    <string name="yil_ilerde">Doğum tarihi bugünün tarihinden ilerde olamaz ! </string>

    <string name="yil">yıl</string>
    <string name="ay">ay</string>
    <string name="gun">gün</string>
    <string name="kaldi">kaldi.</string>

    <string name="mesaj_dogum_tarihi_girmelisin">Doğum tarihini girmelisin !</string>
    <string name="mesaj_bugun_dogum_gunu">Bugün doğum günü kutlamaya ne dersin.</string>

    <string name="buyuksun">büyüksün.</string>
    <string name="kucuksun">küçüksün.</string>
    <string name="ayni_yastasiniz">Aynı yaştasınız.</string>

    <string name="bugunun_tarihinden_ilerde_tarih_secemezsin">Bugünün tarihinden ilerde bir tarih seçemezsin!</string>


    <string-array name="spinnerim">
        <item>Anne</item>
        <item>Baba</item>
        <item>Kız Evlat</item>
        <item>Erkek Evlat</item>
        <item>Dede</item>
        <item>Büyük Anne</item>
    </string-array>

    <string name="anne">Anne</string>
    <string name="baba">Baba</string>
    <string name="kiz">Kız Evlat</string>
    <string name="erkek">Erkek Evlat</string>
    <string name="dede">Dede</string>
    <string name="nine">Büyük Anne</string>

    <string name="banner_ad_unit_id">ca-app-pub-4823957878150792/3634691062</string>
    <string name="title_activity_main_page">MainPage</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
