<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context="oyun.ozan.kacyasindayim.Giris">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:background="@android:color/black"
        android:layout_alignParentTop="true">


        <Button
            android:id="@+id/btnYasHesapla"
            android:text="@string/girisYasHesaplaButonuTexti"
            android:textColor="#ffcaff37"
            android:textSize="33sp"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:background="@drawable/butonshape"
            android:shadowColor="#000000"
            android:shadowDx="3"
            android:shadowDy="0"
            android:shadowRadius="5"
            />


        <Button
            android:layout_marginTop="10dp"
            android:text="@string/girisSoyAgaciButonuTexti"
            android:id="@+id/btnSoyAgaci"
            android:layout_gravity="center_horizontal"
            android:textColor="#ffffbb6d"
            android:textSize="26sp"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:background="@drawable/butonshape"
            android:shadowColor="#000000"
            android:shadowDx="3"
            android:shadowDy="0"
            android:shadowRadius="5"

            />

        <Button
            android:text="@string/girisDigerButonuTexti"
            android:layout_marginTop="10dp"
            android:id="@+id/btnDiger"
            android:layout_gravity="center_horizontal"
            android:textColor="#ffafdbff"
            android:textSize="40sp"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:background="@drawable/butonshape"
            android:shadowColor="#000000"
            android:shadowDx="3"
            android:shadowDy="0"
            android:shadowRadius="5"/>

        <Button
            android:layout_marginTop="10dp"
            android:text="@string/girisNeKadarBuyugumButonuTexti"
            android:id="@+id/btnNeKadarBuyuk"
            android:layout_gravity="center_horizontal"
            android:textColor="#ffff5d58"
            android:textSize="27sp"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:background="@drawable/butonshape"
            android:shadowColor="#000000"
            android:shadowDx="3"
            android:shadowDy="0"
            android:shadowRadius="5" />
    </LinearLayout>


    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>
