<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="oyun.ozan.kacyasindayim.DigerleriEkle">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewDigerleriEkle"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout2"
        android:weightSum="1"
        >


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etGirilenDiger"
                android:layout_weight="0.5"
                android:inputType="textPersonName"
                android:textSize="20sp"
                android:maxLines="1"
                android:singleLine="true"
                android:hint="@string/isimGirHintTexti" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/yasHesaplaDogumTarihiButonu"
                android:gravity="center"
                android:layout_weight="0.5"
                android:textSize="20sp"
                android:layout_marginTop="30dp"
                android:id="@+id/tvDigerDogumTarihi"
                android:background="#ffffd138" />

        </android.support.design.widget.TextInputLayout>


    </LinearLayout>

    <Button
        android:text="@string/ekleButonuTexti"
        android:textSize="20sp"
        android:id="@+id/btnDigerEkle"
        android:layout_marginTop="54dp"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:textColor="#ffafdbff"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:background="@drawable/butonshape"
        android:shadowColor="#000000"
        android:shadowDx="3"
        android:shadowDy="0"
        android:shadowRadius="5" />

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:calendarViewShown="false"
        android:spinnersShown="true"
        android:visibility="gone"
        android:id="@+id/datePicker4"
        android:layout_below="@+id/btnDigerEkle"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
