<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/black"
    tools:context="oyun.ozan.kacyasindayim.DigerleriAraEkran">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">



        <Button
            android:layout_marginTop="50dp"
            android:text="@string/ekleButonuTexti"
            android:id="@+id/btnDigerleriAraEkranEkle"
            android:layout_gravity="center_horizontal"
            android:textColor="#ffafdbff"
            android:textSize="30sp"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:background="@drawable/butonshape"
            android:shadowColor="#000000"
            android:shadowDx="3"
            android:shadowDy="0"
            android:shadowRadius="5" />

        <Button
            android:text="@string/GorButonuTexti"
            android:layout_marginTop="10dp"
            android:id="@+id/btnAraEkranDigerleriGor"
            android:layout_gravity="center_horizontal"
            android:textColor="#ffafdbff"
            android:textSize="30sp"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:background="@drawable/butonshape"
            android:shadowColor="#000000"
            android:shadowDx="3"
            android:shadowDy="0"
            android:shadowRadius="5" />
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewDigerleriAraEkran"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>
