<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="oyun.ozan.kacyasindayim.YasHesapla">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewYasHesapla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">



        <Button
            android:layout_width="fill_parent"
            android:layout_height="@dimen/buton_height"
            android:text="@string/yasHesaplaBugununTarihiButonu"
            android:id="@+id/btnBugununTarihi"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/text_size"
            android:background="#ffffd138" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textSize="30sp"
            android:id="@+id/tvBugun"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:text="@string/yasHesaplaDogumTarihiButonu"
            android:layout_marginTop="30dp"
            android:id="@+id/btnDogumTarihi"
            android:layout_gravity="center_horizontal"
            android:background="#ffffd138" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="30sp"
            android:gravity="center"
            android:id="@+id/tvDogum"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_gravity="center"
            android:text="@string/yasHesaplaHesaplaButonu"
            android:layout_marginTop="30dp"
            android:id="@+id/btnHesapla"
            android:textColor="#ffcaff37"
            android:textSize="30sp"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:background="@drawable/butonshape"
            android:shadowColor="#000000"
            android:shadowDx="3"
            android:shadowDy="0"
            android:shadowRadius="5"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvSonuc"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:textSize="30sp" />

        <DatePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:id="@+id/datePicker"
            android:layout_gravity="center_horizontal"
            android:calendarViewShown="false"
            android:spinnersShown="true"
            android:background="#ffccffcc"
            android:visibility="gone" />

    </LinearLayout>

</RelativeLayout>
