<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="oyun.ozan.kacyasindayim.NeKadarBuyuk">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewNeKadarBuyuk"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/NeKadarBuyugumDogumTarihiniGirTexti"
            android:id="@+id/btnDogTar1"
            android:layout_gravity="center_horizontal"
            android:background="#ffffd138" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="30sp"
            android:gravity="center"
            android:id="@+id/tvDogTar1"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/NeKadarBuyugumDogumTarihiniGirTexti"
            android:layout_marginTop="10dp"
            android:id="@+id/btnDogTar2"
            android:layout_gravity="center_horizontal"
            android:background="#ffffd138" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="30sp"
            android:gravity="center"
            android:id="@+id/tvDogTar2"
            android:layout_gravity="center_horizontal" />

        <Button

            android:layout_marginTop="10dp"
            android:text="@string/yasHesaplaHesaplaButonu"
            android:id="@+id/btnYasFarki"
            android:layout_gravity="center_horizontal"
            android:textColor="#ffff5d58"
            android:textSize="27sp"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:background="@drawable/butonshape"
            android:shadowColor="#000000"
            android:shadowDx="3"
            android:shadowDy="0"
            android:shadowRadius="5" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textSize="30sp"
            android:id="@+id/tvDogTarSonucu"
            android:layout_gravity="center_horizontal" />

        <DatePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:spinnersShown="true"
            android:visibility="gone"
            android:id="@+id/datePicker3"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

</RelativeLayout>
